# workouts

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
analyzer/: apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
analyzer/management/commands/: generate.py
config/: settings.py  urls.py
